# py-update-tmx

./: README.md  pyproject.toml
code/: main.py
data/: .~lock.change-requests.xlsx#  change-requests.xlsx
